--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "react-modal-video": "^2.0.2",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.9"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "22.3.0",
     "@types/react": "18.3.3",
     "eslint": "^8",
