--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-modal-video": "^2.0.2",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
